--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,9 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Enable mouse support
 set -g mouse on
 
+# Enable clipboard integration
+set-option -g set-clipboard on
+
 # Set the prefix key to Ctrl+b
 set -g prefix C-b
 unbind C-a
@@ -34,3 +37,10 @@ bind d detach-client
 
 # Reload configuration
 bind r source-file ~/.tmux.conf
+
+# Plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+
+# Initialize tmux plugin manager (keep this line at the very bottom)
+run '~/.tmux/plugins/tpm/tpm'
