--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,10 +5,11 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 # Enable mouse support
 set -g mouse on
 
-# Enable clipboard integration
+# Enable clipboard integration (requires xclip or pbcopy on macOS)
+# Ensure you have 'xclip' or 'xsel' installed on Linux, and 'pbcopy'/'pbpaste' on macOS
 set-option -g set-clipboard on
 
-# Set the prefix key to Ctrl+b
+# Set the prefix key to Ctrl+b (default)
 set -g prefix C-b
 unbind C-a
 bind C-b send-prefix
